@@ -81,6 +81,13 @@ Remember that if you want to move the library files (libslap.a and
 libglimmer.a), the .mod files need to be moved as well (or the compiler told
 where to find them)
 
+Using the Sun Grid Engine
+=========================
+The tar-ball distribution comes with a shell script wrapper suitable for
+submitting a model run to cluster managed by the Sun Grid Engine scheduler.
+Depending on your setup you might need to modify the submission script:
+src/python/qsub_glide.sh
+
 Tests
 =====
 There are a few very basic tests in the tests directory. The idea is that these
